--- a/copy_vuln.html
+++ b/copy_vuln.html
@@ -14,6 +14,7 @@
 <p>If something along the lines of 'clear' and 'echo Super idol' or a newline (not a newline) '\\n' stays in the input field,</p>
 <p>then I think that you're safe.</p>
 <p>The hidden text actually is clear && echo "Super idol" (newline at end too?)</p>
+<p>Super Idol 的笑容都没你的甜</p>
 
 
 <p>Paste (NOT TYPE) the comnand below into your OpenOS.</p>
